[package]
name = "test"
description="WASM test"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.42", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"

[profile.release]
lto = true
opt-level = 3 # levels: 1..3, z, s. 3 is fastest, s is slowest but smallest.
